expose-sampleapi/namespace.yml
apiVersion: v1
kind: Namespace 
metadata: 
  name: default
  labels:
    istio-injection:  enabled
